<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">Example Text</string>
    <string name="login_terms_and_conditions">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="login_screen_email_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_login_button">Login</string>
    <string name="login_screen_signup_button">Sign Up</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>
    <string name="signup_screen_button_join">Join.</string>
    <string name="signup_screen_email_hint">Email.</string>
    <string name="signup_screen_password_hint">Password.</string>
    <string name="signup_screen_confirm_password_hint">Confirm password.</string>
    <string name="signup_screen_header_text">Sign Up.</string>
    <string name="home_screen_header_text">Wolox.</string>
    <string name="news_fragment_title">News</string>
    <string name="profile_fragment_title">Profile</string>

    <!-- Errors and alerts Messages -->
    <string name="login_alert_input">You must fill all the fields.</string>
    <string name="login_alert_bad_email">Invalid email format.</string>
    <string name="login_invalid_credentials">Invalid credentials. Check your username or password.</string>
    <string name="login_connection_error">No internet connection found.</string>
    <string name="zero_news_alert">There are no news for you :(</string>
    <string name="connection_error">No internet connection found.</string>
    <string name="total_pages_reached_alert">There aren\'t more pages to be shown.</string>
    <string name="wrong_credentials_alert">Credentials mismatch, try re-login in.</string>
    <string name="like_new_notification">Like updated!</string>

    <!-- Misc -->
    <string name="woloxLogoContentDesc">Wolox Logo</string>

    <!--News Messages -->
    <string name="lorem_ipsum_paragraph">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus imperdiet arcu tortor, sed suscipit neque tristique vitae.
    </string>
    <string name="go_back">Go back</string>

</resources>