<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#FFFFFF"
		android:gravity="center"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/imageView7"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:adjustViewBounds="true"
			android:background="@drawable/login_cover"
			android:scaleType="centerCrop"
			android:src="@drawable/gradient" />

		<ImageView
			android:id="@+id/imageView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="120dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/imageView7"
			app:srcCompat="@drawable/wolox_logo_large" />

		<EditText
			android:id="@+id/email_login"
			android:layout_width="361dp"
			android:layout_height="70dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="16dp"
			android:gravity="center"
			android:hint="@string/login_screen_email_hint"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageView3" />

		<EditText
			android:id="@+id/password"
			android:layout_width="365dp"
			android:layout_height="57dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:gravity="center"
			android:hint="@string/login_screen_password_hint"
			android:inputType="text"
			android:maxLines="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_login" />

		<Button
			android:id="@+id/loginButton"
			android:layout_width="333dp"
			android:layout_height="60dp"
			android:layout_marginTop="40dp"
			android:text="@string/login_screen_login_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password" />

		<TextView
			android:id="@+id/terms_and_conditions"
			android:layout_width="327dp"
			android:layout_height="46dp"
			android:layout_marginTop="720dp"
			android:gravity="bottom|center_horizontal"
			android:text="@string/login_terms_and_conditions"
			android:textSize="@dimen/font_medium_extra"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.484"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/imageView7" />

		<Button
			android:id="@+id/loginButton3"
			android:layout_width="328dp"
			android:layout_height="61dp"
			android:layout_marginTop="32dp"
			android:background="@color/colorPrimary"
			android:text="@string/login_screen_signup_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.492"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/loginButton" />


	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>