<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/fullWhite"
		android:gravity="center"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/backgroundLogo"
			android:layout_width="match_parent"
			android:layout_height="@dimen/background_image_height"
			android:adjustViewBounds="true"
			android:background="@drawable/login_cover"
			android:scaleType="centerCrop"
			android:src="@drawable/gradient"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageView
			android:id="@+id/woloxLogo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/wolox_logo_margin_top"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/backgroundLogo"
			app:srcCompat="@drawable/wolox_logo_large" />

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="@dimen/login_input"
			android:layout_marginStart="@dimen/login_input_margin_start"
			android:layout_marginTop="@dimen/login_input_margin_top"
			android:layout_marginEnd="@dimen/login_input_margin_end"
			android:gravity="center"
			android:hint="@string/login_screen_email_hint"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/woloxLogo" />

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="@dimen/login_input"
			android:layout_marginStart="@dimen/login_input_margin_start"
			android:layout_marginTop="@dimen/login_input_margin_top"
			android:layout_marginEnd="@dimen/login_input_margin_end"
			android:gravity="center"
			android:hint="@string/login_screen_password_hint"
			android:inputType="textPassword"
			android:maxLines="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email" />

		<Button
			android:id="@+id/loginButton"
			android:layout_width="@dimen/button_width"
			android:layout_height="@dimen/button_height"
			android:layout_marginTop="@dimen/button_margin_top"
			android:text="@string/login_screen_login_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password" />

		<TextView
			android:id="@+id/terms_and_conditions"
			android:layout_width="match_parent"
			android:layout_height="@dimen/static_spacing_big"
			android:gravity="bottom|center_horizontal"
			android:text="@string/login_terms_and_conditions"
			android:textSize="@dimen/font_medium_extra"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/signUpButton"
			/>

		<Button
			android:id="@+id/signUpButton"
			android:layout_width="@dimen/button_width"
			android:layout_height="@dimen/button_height"
			android:layout_marginTop="@dimen/button_margin_top"
			android:background="@color/colorPrimary"
			android:text="@string/login_screen_signup_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/loginButton" />

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
			app:layout_constraintBottom_toTopOf="@+id/terms_and_conditions"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/signUpButton" />


	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>